# v2ray-url-decoder

./: .gitignore  README.md  pyproject.toml  tasks.py
templates/: config.json  test_config.json
v2decoder/: config.py  decoder.py  main.py  resource.py  tester.py
v2decoder/templates/: config.json
