[tool.poetry]
name = "v2decoder"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
speedtest-cli = "^2.1.2"
psutil = "^5.7.0"
invoke = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
