[tool.poetry]
name = "v2decoder"
version = "0.1.2"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
speedtest-cli = "^2.1.3"
psutil = "^5.7.0"
ping3 = "^2.9.1"

[tool.poetry.scripts]
v2urldeco = "v2decoder.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pdbpp = "^0.10.2"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
